# pi-client

./: .gitignore  PLAN.md  TESTING.md  package.json  pnpm-lock.yaml  pnpm-workspace.yaml
.github/workflows/: build.yml
app/: package.json  vite.config.js
app/routes/: +page.svelte
app/src/: app.css  app.html
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/capabilities/: default.json
app/src-tauri/src/: bridge.rs  commands.rs  lib.rs  session.rs  state.rs
app/src/lib/: ipc.ts
app/src/lib/components/: ChatPanel.svelte  DiffViewer.svelte  FileTree.svelte  InputEditor.svelte  MarkdownRenderer.svelte  MessageBubble.svelte  ModelSelector.svelte  SessionList.svelte  SettingsPanel.svelte  SetupWizard.svelte  StatusBar.svelte  StreamingText.svelte  ThemeToggle.svelte  ThinkingBlock.svelte  ToolCallCard.svelte
app/src/lib/stores/: session.svelte.ts  sessions.svelte.ts  settings.svelte.ts
app/src/lib/utils/: shortcuts.ts  updater.ts
app/src/routes/: +layout.ts  +page.svelte
bridge/: build.js  package.json  sea-config.json
bridge/src/: agent.ts  bootstrap.js  config.ts  index.ts  protocol.ts
dev-log/: 2026-05-28-handoff-hsxfBZ.md
scripts/: build-bridge-sea.ps1  build-bridge-sea.sh  build-portable.ps1  build-portable.sh  download-node.ps1  download-node.sh  package.ps1  package.sh
